# piper1-gpl

./: .gitignore
.github/workflows/: build-mobile.yml  publish.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/espeak_ng-install/lib/pkgconfig/: espeak-ng.pc
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  install_manifest.txt
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/phsource/: compile_prog_log
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  espeak-ng
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/src/libespeak-ng/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/src/speechPlayer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/src/ucd-tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/espeak_ng/src/espeak_ng_external-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_api  test_encoding  test_ieee80  test_readclause
_codeql_build_dir/espeak_ng/src/espeak_ng_external-stamp/: espeak_ng_external-gitclone-lastrun.txt  espeak_ng_external-update-info.txt
libpiper/include/: piper.h  uchar_compat.h
libpiper/src/: piper.cpp
mobile/: README.md  README_CN.md
mobile/android/: .gitignore  build.gradle  gradlew  gradlew.bat  settings.gradle
mobile/android/piper/: build.gradle
mobile/android/piper/src/main/: AndroidManifest.xml
mobile/android/piper/src/main/cpp/: CMakeLists.txt  piper_jni.cpp
mobile/android/piper/src/main/java/com/piper/tts/: PiperTTS.java
mobile/ios/: .gitignore  CMakeLists.txt  build_xcframework.sh
mobile/ios/PiperTTS/: PiperTTS.h  PiperTTS.swift  module.modulemap
